--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,18 @@
-/* create custom CSS variables (also called custom properties) and apply them to the root of the page, making them accessible to all other CSS */
 :root {
-  --dark:#2a6592;
+  --dark: #2a6592;
   --light: #fff;
-  --navlink-color: #b9c6ae; 
+  --navlink-color: #b9c6ae;
 }
 
 * {
   box-sizing: border-box;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  line-height: 1.3; 
+  line-height: 1.3;
 }
-
 
 header {
   display: flex;
@@ -34,7 +30,6 @@ header {
   list-style-type: none;
   text-align-last: right;
   color: var(--light);
-
 }
 
 nav a {
@@ -43,9 +38,9 @@ nav a {
   text-decoration: none;
 }
 
- nav a:hover {
+nav a:hover {
   color: var(--light);
-} 
+}
 
 a[href*='.css']::after {
   content: '📝';
@@ -53,28 +48,32 @@ a[href*='.css']::after {
   margin-left: 3px;
 }
 
-.center{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  
-}
-
-section .aboutme .work .skills{
+.container {
   display: flex;
-  flex: 1 1 0;
-  max-width: 50%;
-  margin: 2% auto;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
+img {
+  margin-right: 20px;
+}
 
-section p{
-  margin: 2% 0;
+.content {
+  flex: 1;
+  margin-left: 20px;
+}
+
+.aboutme,
+.work {
+  margin-bottom: 20px;
+  padding: 50px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
+  background-color: var(--dark);
+  color: var(--light);
 }
 
-.skills{
+.skills {
   list-style-type: none;
   margin-bottom: 20px;
   padding: 50px;
@@ -82,19 +81,9 @@ section p{
   font-size: 20px;
   background-color: var(--dark);
   color: var(--light);
-
 }
 
-.aboutme, .work{
-  margin-bottom: 20px;
-  padding: 50px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
-  background-color: var(--dark);
-  color: var(--light);
-}
-
-.footer ul{
+.footer ul {
   display: flex;
   justify-content: center;
   padding: 2%;
@@ -103,11 +92,10 @@ section p{
   color: var(--light);
 }
 
-.msg{
+.msg {
   display: flex;
   justify-content: center;
   font-size: 30x;
   background-color: var(--dark);
   color: var(--light);
 }
-
