--- a/assets/style.css
+++ b/assets/style.css
@@ -1,101 +1,161 @@
-:root {
-  --dark: #2a6592;
-  --light: #fff;
-  --navlink-color: #b9c6ae;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  line-height: 1.3;
-}
-
-header {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1%;
-  background-color: var(--dark);
-  color: var(--light);
+  background-color: #f8f9fa;
+  padding: 20px;
 }
 
-.links {
+.navbar-brand {
+  font-size: 24px;
+  font-weight: bold;
+  color:darkslategray
+}
+
+.navbar-nav {
   display: flex;
-  justify-content: space-between;
-  min-width: 200px;
-  list-style-type: none;
-  text-align-last: right;
-  color: var(--light);
+  list-style: none;
 }
 
-nav a {
-  background-color: unset;
-  color: var(--light);
+.navbar-nav .nav-link {
+  color: gray;
+  margin: 0 15px;
+  font-size: 18px;
   text-decoration: none;
 }
 
-nav a:hover {
-  color: var(--light);
+.navbar-nav .nav-link:hover {
+  color: #007bff;
 }
 
-a[href*='.css']::after {
-  content: '📝';
-  display: inline-block;
-  margin-left: 3px;
+body {
+  font-family: Arial, sans-serif;
 }
 
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
+h1, h2, h3 {
+  color: #333;
 }
 
-img {
-  margin-right: 20px;
+p {
+  color: #666;
+  line-height: 1.6;
 }
 
-.content {
-  flex: 1;
-  margin-left: 20px;
+a {
+  color: #007BFF;
+  text-decoration: none;
 }
 
-.aboutme,
-.work {
-  margin-bottom: 20px;
-  padding: 50px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
-  background-color: var(--dark);
-  color: var(--light);
+a:hover {
+  color: #0056b3;
 }
 
-.skills {
+section {
+  margin: 20px 0;
+}
+
+#aboutme {
+  margin-bottom: 40px;
+}
+
+#work {
+  margin-bottom: 40px;
+}
+
+.skills ul {
   list-style-type: none;
+  padding: 0;
+}
+
+.skills li {
+  background-color: #f8f9fa;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.container img {
+  width: 50%;
+  height: auto;
+}
+footer {
+  background-color: #f8f9fa;
+  color: #333;
+  padding: 20px 0;
+}
+
+footer h5 {
+  letter-spacing: 2px;
   margin-bottom: 20px;
-  padding: 50px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
-  background-color: var(--dark);
-  color: var(--light);
+  font-size: 18px;
 }
 
-.footer ul {
-  display: flex;
-  justify-content: center;
-  padding: 2%;
-  font-size: 20x;
-  background-color: var(--dark);
-  color: var(--light);
+footer a {
+  color: black
+  text-decoration: none;
 }
 
-.msg {
-  display: flex;
-  justify-content: center;
-  font-size: 30x;
-  background-color: var(--dark);
-  color: var(--light);
+footer a:hover {
+  color: #007bff;
+}
+
+footer p {
+  margin-bottom: 10px;
+}
+
+footer .container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+@media (max-width: 992px) {
+  /* styles for devices smaller than 992px (typical breakpoint for desktops and laptops) */
+  .navbar-brand {
+      font-size: 1.5em;
+  }
+  h2 {
+      font-size: 1.2em;
+  }
+  .aboutme p, .work p, .skills ul {
+      font-size: 1em;
+  }
+  .rounded-circle {
+      width: 150px;
+      height: 150px;
+  }
+}
+
+@media (max-width: 768px) {
+  /* styles for devices smaller than 768px (typical breakpoint for tablets) */
+  .navbar-brand {
+      font-size: 1.2em;
+  }
+  h2 {
+      font-size: 1em;
+  }
+  .aboutme p, .work p, .skills ul {
+      font-size: 0.8em;
+  }
+  .rounded-circle {
+      width: 100px;
+      height: 100px;
+  }
+}
+
+@media (max-width: 576px) {
+  /* styles for devices smaller than 576px (typical breakpoint for mobile phones) */
+  .navbar-brand {
+      font-size: 1em;
+  }
+  h2 {
+      font-size: 0.8em;
+  }
+  .aboutme p, .work p, .skills ul {
+      font-size: 0.7em;
+  }
+  .rounded-circle {
+      width: 75px;
+      height: 75px;
+  }
 }
