--- a/assets/style.css
+++ b/assets/style.css
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f8f9fa;
+  background-color: #2f2f2f; 
   padding: 20px;
 }
 
 .navbar-brand {
   font-size: 24px;
   font-weight: bold;
-  color:darkslategray
+  color: #FFF; 
 }
 
 .navbar-nav {
@@ -18,7 +18,7 @@
 }
 
 .navbar-nav .nav-link {
-  color: gray;
+  color: #B3B3B3; 
   margin: 0 15px;
   font-size: 18px;
   text-decoration: none;
@@ -30,19 +30,20 @@
 
 body {
   font-family: Arial, sans-serif;
+  background-color:grey; 
 }
 
 h1, h2, h3 {
-  color: #333;
+  color: #000; /* Black */
 }
 
 p {
-  color: #666;
+  color: black; 
   line-height: 1.6;
 }
 
 a {
-  color: #007BFF;
+  color: black;
   text-decoration: none;
 }
 
@@ -68,7 +69,6 @@ section {
 }
 
 .skills li {
-  background-color: #f8f9fa;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 4px;
@@ -78,9 +78,10 @@ section {
   width: 50%;
   height: auto;
 }
+
 footer {
-  background-color: #f8f9fa;
-  color: #333;
+  background-color: #333; /* Dark gray */
+  color: black;
   padding: 20px 0;
 }
 
@@ -91,7 +92,7 @@ footer h5 {
 }
 
 footer a {
-  color: black
+  color: #FFF; /* White */
   text-decoration: none;
 }
 
